@@ -1,3 +1,7 @@
+2013-11-07  Jeff Law  <law@redhat.com>
+
+	* builtins.c (initialize_builtins): Provide __builtin_trap.
+
 2013-10-29  David Malcolm  <dmalcolm@redhat.com>
 
 	Patch autogenerated by refactor_symtab.py from
